--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-03  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure.in: Rename to configure.ac.
+	* configure.ac: Renamed from configure.in; make minimum necessary
+	changes for autoconf 2.5x.
+	* aclocal.m4: Make minimum necessary changes for autoconf 2.5x.
+	* configure: Regenerate with autoconf 2.57.
+
 2004-01-03  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/mips/linux.h: Fix comment formatting.
