* configure.ac: Replace AC_INIT, AC_OUTPUT, AC_CANONICAL_SYSTEM 	with modern equivalents. 	* configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75366 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-03  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* configure.ac: Replace AC_INIT, AC_OUTPUT, AC_CANONICAL_SYSTEM
+	with modern equivalents.
+	* configure: Regenerate.
+
         * configure.ac: Replace gcc_AC_CHECK_TYPE with AC_CHECK_TYPE.
         * aclocal.m4 (gcc_AC_CHECK_TYPE): Remove.
         * configure: Regenerate.
