--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-03  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* gcc_update (files_and_dependencies): For gcc directory,
+	rename configure.in to configure.ac.
+
 2003-12-19  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* gcc_update (files_and_dependencies): For libjava/libltdl directory,
