--- a/lno-branch/gcc/doc/invoke.texi
+++ b/lno-branch/gcc/doc/invoke.texi
@@ -251,6 +251,7 @@ in the following sections.
 -fdump-tree-optimized@r{[}-@var{n}@r{]} @gol
 -fdump-tree-inlined@r{[}-@var{n}@r{]} @gol
 -fdump-tree-cfg -fdump-tree-dot -fdump-tree-alias @gol
+-fdump-tree-copy-headers @gol
 -fdump-tree-ssa@r{[}-@var{n}@r{]} -fdump-tree-pre@r{[}-@var{n}@r{]} @gol
 -fdump-tree-ccp@r{[}-@var{n}@r{]} -fdump-tree-dce@r{[}-@var{n}@r{]} @gol
 -fdump-tree-gimple@r{[}-raw@r{]} -fdump-tree-mudflap@r{[}-@var{n}@r{]} @gol
@@ -3526,6 +3527,14 @@ made by appending @file{.cfg} to the source file name.
 @opindex fdump-tree-dot
 Dump a dot language representation of the control flow graph to a file.  The
 file name is made by appending @file{.dot} to the source file name.
+
+@item copy-headers
+@opindex fdump-tree-copy-headers
+Dump each function after copying loop headers.  The file name is made by
+appending @file{.ch} to the source file name.
+
+Dump the control flow graph of each function to a file.  The file name is
+made by appending @file{.cfg} to the source file name.
 
 @item ssa
 @opindex fdump-tree-ssa
