--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-03  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* update_web_docs: Create tarballs of documentation sources and
+	HTML docs.
+
 2004-01-02  Gerald Pfeifer  <gp@suse.de>
 
 	* update_version: Add some documentation.
