* java/util/Date.java (parse):  Fix a number of problems. 	(skipParens):  Remove no-longer-needed method.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75381 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-03  Per Bothner  <per@bothner.com>
+
+	* java/util/Date.java (parse):  Fix a number of problems.
+	(skipParens):  Remove no-longer-needed method.
+
 2003-12-31  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/java/net/protocol/http/Connection.java
