* lang.opt (i8, std=*): Remove RejectNegative.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75386 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-04  Paul Brook  <paul@codesourcery.com>
 
+	* lang.opt (i8, r8, std=*): Remove RejectNegative.
+
+2004-01-04  Paul Brook  <paul@codesourcery.com>
+
 	* error.c (gfc_notify_std): New function.
 	* gfortran.h (gfc_notify_std): Declare.
 	(GFC_STD_*): Define.
