* MAINTAINERS: Move myself from 'Write After Approval' to 	'CPU Port Maintainers' section as SPARC maintainer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75388 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/ChangeLog
+++ b/gcc-3_3-branch/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* MAINTAINERS: Move myself from 'Write After Approval' to
+	'CPU Port Maintainers' section as SPARC maintainer.
+
 2004-01-02  Roger Sayle  <roger@eyesopen.com>
 
 	* configure.in (ia64*-*-hpux*): Disable building java libraries.
