PR c/3414 	* doc/extend.texi: Clarify definition of malloc attribute.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75395 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-04  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	PR c/3414
+	* doc/extend.texi: Clarify definition of malloc attribute.
+
 2004-01-04  Jan Hubicka  <jh@suse.cz>
 
 	* Makefile.in (cgraph.o, cgraphunit.o): Add intl.h dependency.
