PR c++/12226 	* call.c (CHECK_COPY_CONSTRUCTOR_P): New macro. 	(reference_binding): Set it when appropriate. 	(build_temp): New function, split out from ... 	(convert_like_real): ... here.  Honor CHECK_COPY_CONSTRUCTOR_P. 	(initialize_reference): Likewise.
	PR c++/12226
	* g++.dg/init/copy7.c: New test.

	PR c++/12226
	* testsuite/27_io/basic_filebuf/4.cc: Remove use of invalid copy
	constructor.
	* testsuite/27_io/basic_fstream/4.cc: Likewise.
	* testsuite/27_io/basic_ifstream/4.cc: Likewise.
	* testsuite/27_io/basic_ios/4.cc: Likewise.
	* testsuite/27_io/basic_iostream/4.cc: Likewise.
	* testsuite/27_io/basic_istream/4.cc: Likewise.
	* testsuite/27_io/basic_istingstream/4.cc: Likewise.
	* testsuite/27_io/basic_ofstream/4.cc: Likewise.
	* testsuite/27_io/basic_ostream/4.cc: Likewise.
	* testsuite/27_io/basic_ostringstream/4.cc: Likewise.
	* testsuite/27_io/basic_stringbuf/5.cc: Likewise.
	* testsuite/27_io/basic_stringstream/4.cc: Likewise.

	PR c++/13536
	* parser.c (cp_parser): Add in_type_id_in_expr_p.
	(cp_parser_new): Initialize it.
	(cp_parser_postfix_expression): Set it.
	(cp_parser_sizeof_operand): Likewise.
	(cp_parser_parameteR_declaration): Do not commit early to tenative
	parsers when in_type_id_in_expr_p is set.

	PR c++/13536
	* g++.dg/parse/cast1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75397 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,20 @@
+2004-01-04  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12226
+	* call.c (CHECK_COPY_CONSTRUCTOR_P): New macro.
+	(reference_binding): Set it when appropriate.
+	(build_temp): New function, split out from ...
+	(convert_like_real): ... here.  Honor CHECK_COPY_CONSTRUCTOR_P.
+	(initialize_reference): Likewise.
+
+	PR c++/13536
+	* parser.c (cp_parser): Add in_type_id_in_expr_p.
+	(cp_parser_new): Initialize it.
+	(cp_parser_postfix_expression): Set it.
+	(cp_parser_sizeof_operand): Likewise.
+	(cp_parser_parameteR_declaration): Do not commit early to tenative
+	parsers when in_type_id_in_expr_p is set.
+
 2004-01-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/13094
