--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-04  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/12226
+	* g++.dg/init/copy7.c: New test.
+
+	PR c++/13536
+	* g++.dg/parse/cast1.C: New test.
+
 2004-01-04  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.dg/winline[1-7].c: New tests.
