* g++.dg/init/copy7.C: Add missing dg-error markers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75408 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-04  Mark Mitchell  <mark@codesourcery.com>
 
+	* g++.dg/init/copy7.C: Add missing dg-error markers.
+
 	PR c++/12226
 	* g++.dg/init/copy7.c: New test.
 
