--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-04  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13529
+	* parser.c (cp_parser_postfix_expression): Allow "." to appear in
+	an offsetof expression.
+
 	* parser.c (cp_parser_parameter_declaration): Fix comment.
 
 	PR c++/12226
