--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-04  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13529
+	* g++.dg/parse/offsetof3.C: New test.
+
 	* g++.dg/init/copy7.C: Add missing dg-error markers.
 
 	PR c++/12226
