* configure.ac: Use AC_PROG_CPP_WERROR. 	* configure: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-04  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure.ac: Use AC_PROG_CPP_WERROR.
+	* configure: Regenerate.
+
 2004-01-04  Zack Weinberg  <zack@codesourcery.com>
 
 	* .cvsignore: Add autom4te.cache.
