* config/m68k/m68k.c (output_andsi3): Fix signed/unsigned comparison 	warning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75412 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Bernardo Innocenti  <bernie@develer.com>
+
+	* config/m68k/m68k.c (output_andsi3): Fix signed/unsigned comparison
+	warning.	
+
 2004-01-04  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure.ac: Use AC_PROG_CPP_WERROR.
