PR c++/13157 	* name-lookup.c (lookup_using_namespace): Remove spacesp 	parameter. 	(unqualified_namespace_lookup): Likewise. 	(lookup_qualified_name): Adjust accordingly. 	(lookup_name_real): Likewise. 	(lookup_arg_dependent): Do not eliminate the namespace of the 	functions found by unqualified name lookup unless that is the 	current namespace.
	PR c++/13157
	* g++.dg/template/koenig3.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75416 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,15 @@
+2004-01-04  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13157
+	* name-lookup.c (lookup_using_namespace): Remove spacesp
+	parameter.
+	(unqualified_namespace_lookup): Likewise.
+	(lookup_qualified_name): Adjust accordingly.
+	(lookup_name_real): Likewise.
+	(lookup_arg_dependent): Do not eliminate the namespace of the
+	functions found by unqualified name lookup unless that is the
+	current namespace.
+
 2004-01-04  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* semantics.c (push_deferring_access_checks): Fix format.
