* doc/invoke.texi: Add documentation for the MIPS -mexplicit-relocs 	option.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75423 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-05  Richard Sandiford  <rsandifo@redhat.com>
 
+	* doc/invoke.texi: Add documentation for the MIPS -mexplicit-relocs
+	option.
+
+2004-01-05  Richard Sandiford  <rsandifo@redhat.com>
+
 	PR target/12945
 	* coverage.c (coverage_counter_alloc): Set SYMBOL_FLAG_LOCAL for
 	for counter labels.
