Fix typo (double "for"s).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75426 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -7,7 +7,7 @@
 
 	PR target/12945
 	* coverage.c (coverage_counter_alloc): Set SYMBOL_FLAG_LOCAL for
-	for counter labels.
+	counter labels.
 	* config/mips/mips.c (INTERNAL_SYMBOL_P): Delete.
 	(mips_classify_symbol): Always treat SYMBOL_REF_FLAG as indicating
 	string constants if TARGET_MIPS16.  Use SYMBOL_REF_DECL to check
