* doc/invoke.texi: Remove traces of dead ports.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75430 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/invoke.texi: Remove traces of dead ports.
+
 2004-01-05  Richard Sandiford  <rsandifo@redhat.com>
 
 	* doc/invoke.texi: Add documentation for the MIPS -mexplicit-relocs
