--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-05  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* tree.h: Update documentation on nothrow_flag.
+	* print-tree.c (print_node): Print TREE_NOTHROW as "align-ok" for
+	types.
+
 2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* doc/invoke.texi: Remove traces of dead ports.
