--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/mn10300/mn10300.c: Fix comment formatting.
+	* config/mn10300/mn10300.h: Likewise.
+
 2004-01-05  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* tree.h: Update documentation on nothrow_flag.
