--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* doc/invoke.texi: Remove a page break.
+
+2004-01-05  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/avr/avr.c (avr_output_function_prologue): Remove an
 	extra pair of curly braces.
 
