2004-01-05  Sascha Brawer  <brawer@dandelis.ch>
	Thanks to Brian Gough <bjg@network-theory.com>
	* java/awt/geom/CubicCurve2D.java (solveCubic): Implemented.
	* java/awt/geom/QuadCurve2D.java (solveQuadratic): Re-written.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75437 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-05  Sascha Brawer  <brawer@dandelis.ch>
+
+	Thanks to Brian Gough <bjg@network-theory.com>
+	* java/awt/geom/CubicCurve2D.java (solveCubic): Implemented.
+	* java/awt/geom/QuadCurve2D.java (solveQuadratic): Re-written.
+
 2004-01-04  Matthias Klose  <doko@debian.org>
 
 	* aclocal.m4: Rebuilt using "aclocal -I .".
